// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. inner component with page 1`] = `
<div
  className="css-text-76zvg2"
>
  {
  "page": 1
}
</div>
`;

exports[`does not update the page state when the history changes without a page 1`] = `
<div
  className="css-text-76zvg2"
>
  2
</div>
`;

exports[`updates the page state when the history changes 1`] = `
<div
  className="css-text-76zvg2"
>
  4
</div>
`;
